--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.2.RELEASE</version>
+        <version>2.3.6.RELEASE</version>
         <relativePath/>
     </parent>
 
     <!-- 依赖版本管理 -->
     <!-- spring-cloud版本可以去 https://start.spring.io 根据springBoot自己查看 -->
+    <!--    spring-cloud-alibaba 版本说明 https://github.com/alibaba/spring-cloud-alibaba/wiki/%E7%89%88%E6%9C%AC%E8%AF%B4%E6%98%8E-->
     <properties>
         <java.version>1.8</java.version>
         <maven.compiler.source>8</maven.compiler.source>
@@ -33,7 +34,7 @@
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+        <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
         <spring-cloud-alibaba.version>2.2.5.RELEASE</spring-cloud-alibaba.version>
         <spring-cloud-starter-oauth2.version>2.2.5.RELEASE</spring-cloud-starter-oauth2.version>
         <spring-cloud-starter-gateway.version>2.2.5.RELEASE</spring-cloud-starter-gateway.version>
@@ -42,6 +43,7 @@
         <jetcache-starter-redis.version>2.6.0</jetcache-starter-redis.version>
         <springside-utils.version>5.0.0-RC1</springside-utils.version>
         <spring-boot-starter-data-redis.version>2.1.0.1.8</spring-boot-starter-data-redis.version>
+        <nacos-client.version>2.0.1</nacos-client.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -93,6 +95,11 @@
                 <groupId>com.github.AnonymousMister</groupId>
                 <artifactId>spring-boot-starter-data-redis</artifactId>
                 <version>${spring-boot-starter-data-redis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.nacos</groupId>
+                <artifactId>nacos-client</artifactId>
+                <version>${nacos-client.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
