增加共用配置文件

--- a/foolcat-common/pom.xml
+++ b/foolcat-common/pom.xml
@@ -62,17 +62,10 @@
             <groupId>io.springside</groupId>
             <artifactId>springside-utils</artifactId>
         </dependency>
-        <!--swagger2-->
         <dependency>
             <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
+            <artifactId>springfox-boot-starter</artifactId>
         </dependency>
-        <!--swagger2的web界面-->
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-        </dependency>
-        <!--web-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
