增加后台管理登录认证

--- a/foolcat-admin/pom.xml
+++ b/foolcat-admin/pom.xml
@@ -13,7 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>admin-api</module>
-        <module>admin-server</module>
+        <module>admin-service</module>
     </modules>
 
 </project>
