--- a/foolcat-common/pom.xml
+++ b/foolcat-common/pom.xml
@@ -33,9 +33,18 @@
             <artifactId>spring-cloud-starter-oauth2</artifactId>
         </dependency>
         <!--远程调用-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.cloud</groupId>-->
+        <!--            <artifactId>spring-cloud-starter-openfeign</artifactId>-->
+        <!--        </dependency>-->
+        <!-- Dubbo Spring Cloud Starter -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-dubbo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-apache-dubbo-adapter</artifactId>
         </dependency>
         <!--mybatis-plus-->
         <dependency>
