--- a/foolcat-admin/admin-service/pom.xml
+++ b/foolcat-admin/admin-service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>admin-server</artifactId>
+    <artifactId>admin-service</artifactId>
 
     <dependencies>
         <dependency>
